atualizei o meu site

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h1>Mirella soup</h1>
         <img src="../site_de_sopa/icones/cardapio-removebg-preview.png" alt="">
         <nav>
-            <a href="#">INICIO</a>
-            <a href="#cardapio">CARDÁPIO</a>
-            <a href="#sobre">SOBRE</a>
-            <a href="#contacto">CONTACTO</a>
+            <a href="#">Inicio</a>
+            <a href="#cardapio">Cardápio</a>
+            <a href="#sobre">Sobre</a>
+            <a href="#contacto">Contacto</a>
         </nav>
     </header>
     <main class="main1">
-        <img src="../site_de_sopa/imagem_fundo/img4.jpeg" alt="">
+        <img src="../site_de_sopa/imagem_fundo/img13.jpg" alt="">
         <section class="section0">
             <h1>Savor the flavors <br> of the sea at <br> ocean's bounty </h1>
             <p class="taço">_________</p>
